# uwrt_software_training_challenge

./: README.md  tempcmakelists.txt
software_training_assignment/: CMakeLists.txt  package.xml
software_training_assignment/action/: Software.action
software_training_assignment/include/software_training_assignment/: action_turtle.hpp  clear_turtles.hpp  moving_turtle_action_server.hpp  reset_moving_turtle.hpp  spawn_turtle_nodelet.hpp  turtle_circle_publisher.hpp  turtle_publisher.hpp
software_training_assignment/launch/: testlaunch.py  turtlelaunch.py
software_training_assignment/src/: action_turtle.cpp  clear_turtles.cpp  moving_turtle_action_server.cpp  reset_moving_turtle.cpp  spawn_turtle_nodelet.cpp
